# kbmate-cli

./: .gitignore  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/prompts/: prd.md
docs/superpowers/plans/: 2026-05-23-convert-docx-pdf-to-markdown.md  2026-05-25-convert-url-support.md  2026-05-27-bulk-convert-plan.md  2026-05-28-assets-hash-naming.md  2026-05-29-cleanup-and-hash-naming.md
docs/superpowers/specs/: 2026-05-23-convert-docx-pdf-to-markdown.md  2026-05-25-convert-url-support-design.md  2026-05-27-bulk-convert-design.md  2026-05-28-assets-hash-naming-design.md  2026-05-29-cleanup-and-hash-naming-design.md
evals/: minimaxzh.docx
src/kbmate_cli/: docx_converter.py  image_helper.py  main.py  pdf_converter.py  url_downloader.py
src/mate_cli/: image_helper.py  main.py
tests/: test_cli.py  test_docx_converter.py  test_image_helper.py  test_pdf_converter.py  test_url_downloader.py
tests/evals/: datamol-safe README.docx
