[project]
name = "mate-cli"
version = "0.1.0"
description = "CLI tools for knowledge base management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf4llm",
    "pypandoc",
    "typer>=0.15.0",
]

[project.scripts]
kbmate = "mate_cli.main:app"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
