[project]
name = "kbmate-cli"
version = "0.1.0"
description = "CLI tools for knowledge base management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf4llm",
    "pypandoc",
    "typer>=0.15.0",
]

[project.scripts]
kbmate = "kbmate_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
