[project]
name = "kbmate-cli"
version = "0.4.0"
description = "CLI tools for knowledge base management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf4llm",
    "pypandoc",
    "typer>=0.15.0",
]

[project.scripts]
kbmate = "kbmate_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=85"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
]
